--- a/assets/stylesheets/bootstrap/_imc_type.scss
+++ b/assets/stylesheets/bootstrap/_imc_type.scss
@@ -14,3 +14,16 @@ ul {
   margin-bottom: 0;
 }
 
+.navbar-brand {
+  @media (min-width: $screen-sm-min) and (max-width: $screen-md-min - 1px) {
+    &:after {
+      content: 'IMC';
+    }
+  }
+
+  @media (max-width: $screen-sm-min - 1px), (min-width: $screen-md-min) {
+    &:after {
+      content: 'Insight Meditation Center';
+    }
+  }
+}
