Tweak styles and regorganize into IMC stylesheet.
Most of the style tweaks in this commit are related to adding the ficus
religiosa background picture to the hero.

--- a/assets/stylesheets/imc/_jumbotron.scss
+++ b/assets/stylesheets/imc/_jumbotron.scss
@@ -1,7 +1,24 @@
 .jumbotron {
   background-image: url('../images/ficus_religiosa.jpg');
-  background-size: 100%;
+  background-position: left top;
+  background-size: 1920px 600px;
+  background-repeat: no-repeat;
+  color: $jumbotron-color;
   font-weight: 300;
   padding-top: 0;
+
+  a {
+    color: inherit;
+  }
+
+  h1 {
+    border-bottom: 4px $imc-accent-color solid;
+    padding-bottom: 10px;
+  }
+
+  .pic-wrapper {
+    overflow: hidden;
+  }
+
 }
 
