--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -6,4 +6,14 @@
     background: none;
     box-shadow: none;
   }
+
+  &.navbar-default .navbar-brand {
+    color: $navbar-default-link-color;
+    text-shadow: none;
+  }
+
+  .nav.navbar-nav > li > a {
+    color: $navbar-default-link-color;
+    text-shadow: none;
+  }
 }
