Various tweaks to navbar and jumbotron.

--- a/assets/stylesheets/imc/_jumbotron.scss
+++ b/assets/stylesheets/imc/_jumbotron.scss
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   color: $jumbotron-color;
   font-weight: 300;
-  padding-top: 0;
+  padding-top: $padding-large-vertical;
 
   a {
     color: inherit;
