--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -1,4 +1,12 @@
-$navbar-default-link-color: #FFF;
+$solarized-base01:          #586e75;
+$solarized-base2:           #eee8d5;
+$solarized-base3:           #fdf6e3;
+
 $jumbotron-color:           #FFF;
+
 $imc-accent-color:          #859900;
+
+$navbar-default-link-color: #FFF;
+$navbar-mini-color:         #FFF;
+$navbar-mini-bg-color:      $imc-accent-color;
 
