--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -15,5 +15,27 @@
   .nav.navbar-nav > li > a {
     color: $navbar-default-link-color;
     text-shadow: none;
+    font-size: $font-size-large;
+  }
+
+  &.navbar-mini {
+    background-color: $navbar-mini-bg-color;
+    margin-bottom: 0;
+    min-height: 30px;
+
+    .nav.navbar-nav > li {
+      > a {
+        color: $navbar-mini-color;
+        font-size: $font-size-small;
+        padding-top: $padding-base-vertical;
+        padding-bottom: $padding-base-vertical;
+      }
+
+      border-right: 1px solid $navbar-mini-color;
+
+      &:last-child {
+        border-right: none;
+      }
+    }
   }
 }
