--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -1,4 +1,7 @@
+$solarized-base02:          #073642;
 $solarized-base01:          #586e75;
+$solarized-base00:          #657b83;
+$solarized-base1:           #93a1a1;
 $solarized-base2:           #eee8d5;
 $solarized-base3:           #fdf6e3;
 
