Fix Wordpress comment footer incompatibility.

--- a/assets/stylesheets/imc/_footer.scss
+++ b/assets/stylesheets/imc/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+#footer {
   background-color: $solarized-base02;
   color: $solarized-base1;
   padding: $line-height-computed * 2 0 $line-height-computed * 2 0;
