Fix jumbotron padding.

--- a/assets/stylesheets/imc/_jumbotron.scss
+++ b/assets/stylesheets/imc/_jumbotron.scss
@@ -1,7 +1,7 @@
 .jumbotron {
   background-color: transparent;
   color: $jumbotron-color;
-  padding-top: $padding-large-vertical;
+  padding-top: 0;
 
   a {
     color: inherit;
