--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -1,64 +1,51 @@
 .navbar {
-  background: none;
-  border: none;
-  border-radius: 0;
+	background: none;
+	border: none;
+	border-radius: 0;
 
-  &.navbar-default {
-    background: none;
-    box-shadow: none;
-  }
+	&.navbar-default {
+		background: none;
+		box-shadow: none;
 
-  &.navbar-default .navbar-brand {
-    color: $navbar-default-link-color;
-    text-shadow: none;
-  }
+		.navbar-brand {
+			font-family: 'Hind', sans-serif;
+			font-size: $font-size-h2;
+			font-weight: bold;
+		}
+	}
 
-  .nav.navbar-nav > li > a {
-    color: $navbar-default-link-color;
-    text-shadow: none;
-    font-size: $font-size-large;
-  }
+	&.navbar-top {
+		margin-top: $navbar-margin-bottom;
 
-  &.navbar-mini {
-    background-color: $navbar-mini-bg-color;
+		.navbar-nav > li > a {
+			color: $navbar-top-link-color;
+		}
+	}
+
+	#search {
+		margin: 4px 0;
+
+		$height: 24px;
+
+		input {
+			height: $height;
+			padding: 2px 8px;
+		}
+
+		i {
+			height: $height;
+			line-height: $height;
+		}
+	}
+
+	&#mainNav {
+		background-color: $navbar-main-bg-color;
     margin-bottom: 0;
-    min-height: 30px;
+    min-height: 0;
 
-    .nav.navbar-nav > li {
-      > a {
-        color: $navbar-mini-color;
-        font-size: $font-size-small;
-        padding-top: $padding-base-vertical;
-        padding-bottom: $padding-base-vertical;
-      }
-
-      border-right: 1px solid $navbar-mini-color;
-
-      &:last-child {
-        border-right: none;
-      }
-    }
-  }
-
-  #search {
-    margin: 4px 0;
-
-    $height: 24px;
-
-    input {
-      height: $height;
-      padding: 2px 8px;
-    }
-
-    i {
-      height: $height;
-      line-height: $height;
-    }
-  }
-
-  &#mainNav {
-    font-weight: 300;
-    margin-top: 10px;
-  }
+		li > a {
+			color: $navbar-main-color;
+		}
+	}
 }
 
