--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -4,12 +4,24 @@ $solarized-base00:          #657b83;
 $solarized-base1:           #93a1a1;
 $solarized-base2:           #eee8d5;
 $solarized-base3:           #fdf6e3;
+$solarized-yellow:    			#b58900;
+$solarized-orange:   			  #cb4b16;
+$solarized-red:       			#dc322f;
+$solarized-magenta:   			#d33682;
+$solarized-violet:    			#6c71c4;
+$solarized-blue:      			#268bd2;
+$solarized-cyan:      			#2aa198;
+$solarized-green:     			#859900;
 
-$jumbotron-color:           #FFF;
-
+$jumbotron-color:           #fff;
 $imc-accent-color:          #859900;
 
-$navbar-default-link-color: #FFF;
-$navbar-mini-color:         #FFF;
-$navbar-mini-bg-color:      $imc-accent-color;
+$font-family-sans-serif: "Lucida Sans Unicode", sans-serif; // Bootstrap override
+
+$navbar-default-brand-color: $solarized-red; // Bootstrap override
+
+$navbar-top-link-color:     $solarized-yellow;
+
+$navbar-main-bg-color:      $solarized-green;
+$navbar-main-color:         #fff;
 
