--- a/assets/stylesheets/imc/_type.scss
+++ b/assets/stylesheets/imc/_type.scss
@@ -32,3 +32,7 @@ h3.section-header {
   border-bottom: 2px $imc-accent-color solid;
   padding-bottom: 6px;
 }
+
+h4 a.small {
+  color: $link-color;
+}
