--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -1,27 +1,36 @@
-$solarized-base02:          #073642;
-$solarized-base01:          #586e75;
-$solarized-base00:          #657b83;
-$solarized-base1:           #93a1a1;
-$solarized-base2:           #eee8d5;
-$solarized-base3:           #fdf6e3;
-$solarized-yellow:    			#b58900;
-$solarized-orange:   			  #cb4b16;
-$solarized-red:       			#dc322f;
-$solarized-magenta:   			#d33682;
-$solarized-violet:    			#6c71c4;
-$solarized-blue:      			#268bd2;
-$solarized-cyan:      			#2aa198;
-$solarized-green:     			#859900;
+/*
+ * Colors
+ */
+$solarized-base02:           #073642;
+$solarized-base01:           #586e75;
+$solarized-base00:           #657b83;
+$solarized-base1:            #93a1a1;
+$solarized-base2:            #eee8d5;
+$solarized-base3:            #fdf6e3;
+$solarized-yellow:     	 	   #b58900;
+$solarized-orange:   			   #cb4b16;
+$solarized-red:        			 #dc322f;
+$solarized-magenta:   			 #d33682;
+$solarized-violet:     			 #6c71c4;
+$solarized-blue:       			 #268bd2;
+$solarized-cyan:       			 #2aa198;
+$solarized-green:      			 #859900;
 
-$jumbotron-color:           #fff;
-$imc-accent-color:          #859900;
+$imc-accent-color:           #859900;
+$imc-red:                    #c0504d;
+$imc-orange:                 #e36c0a;
+$imc-green:                  #77933c;
+
+$link-color:                 $imc-orange; // Bootstrap override
+
+$navbar-default-brand-color: $imc-red; // Bootstrap override
+$navbar-top-link-color:      $imc-orange;
+$navbar-main-bg-color:       $imc-green;
+$navbar-main-color:          #fff;
+/*
+ * End colors
+ */
+
 
 $font-family-sans-serif: "Lucida Sans Unicode", sans-serif; // Bootstrap override
-
-$navbar-default-brand-color: $solarized-red; // Bootstrap override
-
-$navbar-top-link-color:     $solarized-yellow;
-
-$navbar-main-bg-color:      $solarized-green;
-$navbar-main-color:         #fff;
 
