Fix footer margin bug.

--- a/assets/stylesheets/imc/_footer.scss
+++ b/assets/stylesheets/imc/_footer.scss
@@ -1,6 +1,6 @@
 #footer {
   background-color: $solarized-base02;
   color: $solarized-base1;
-  margin: $line-height-computed;
+  margin-top: $line-height-computed;
   padding: $line-height-computed * 2 0 $line-height-computed * 2 0;
 }
