Various homepage style tweaks.

--- a/assets/stylesheets/_imc.scss
+++ b/assets/stylesheets/_imc.scss
@@ -1,6 +1,7 @@
 // IMC-specific
 @import "imc/variables";
 @import "bootstrap/variables";
+@import "bootstrap/mixins";
 
 @import "bootstrap/mixins/gradients";
 
