--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -10,7 +10,6 @@
 		.navbar-brand {
 			font-family: $navbar-brand-font;
 			font-size: $font-size-h2;
-			font-weight: bold;
 		}
 	}
 
@@ -19,22 +18,6 @@
 
 		.navbar-nav > li > a {
 			color: $navbar-top-link-color;
-		}
-	}
-
-	#search {
-		margin: 4px 0;
-
-		$height: 24px;
-
-		input {
-			height: $height;
-			padding: 2px 8px;
-		}
-
-		i {
-			height: $height;
-			line-height: $height;
 		}
 	}
 
@@ -47,5 +30,9 @@
 			color: $navbar-main-color;
 		}
 	}
+
+  form[role="search"] input {
+    width: 175px;
+  }
 }
 
