--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -20,6 +20,7 @@ $imc-accent-color:           #859900;
 $imc-red:                    #c0504d;
 $imc-orange:                 #e36c0a;
 $imc-green:                  #77933c;
+$imc-light-green:            #f2f7e7;
 
 $link-color:                 $imc-green; // Bootstrap override
 
