--- a/assets/stylesheets/imc/_sidebar.scss
+++ b/assets/stylesheets/imc/_sidebar.scss
@@ -1,12 +1,12 @@
 .sidebar {
-  margin: $line-height-computed $navbar-padding-horizontal $line-height-computed 0;
+  margin: $sidebar-vertical-margin $navbar-padding-horizontal $sidebar-vertical-margin 0;
 
   // .affix makes position: fixed, so
   // we remove the top margin and set
   // top to the same value.
   &.affix {
     margin-top: 0;
-    top: $line-height-computed;
+    top: $sidebar-vertical-margin;
   }
 
   &.affix-bottom {
