--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -32,9 +32,18 @@ $navbar-main-color:          #fff;
 
 //== Typography
 //
-$font-family-sans-serif:     "Lucida Sans Unicode", sans-serif; // Bootstrap override
-$navbar-brand-font:          "Arial", sans-serif;
-
 $font-size-base:             16px; // Bootstrap override
-$font-size-navbar-brand:     ceil(($font-size-base * 2.5)) // ~40px
 
+//** Unit-less `line-height` for use in components like buttons.
+$line-height-base:        1.428571429 !default; // 20/14; copied from Bootstrap
+//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
+$line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px; copied from Bootstrap
+
+$font-family-sans-serif:     "Lucida Sans Unicode", sans-serif; // Bootstrap override
+
+$navbar-brand-font:          "Arial", sans-serif;
+$font-size-navbar-brand:     ceil(($font-size-base * 2.5)); // ~40px
+
+//== Sidebar
+//
+$sidebar-vertical-margin:    $line-height-computed * 2;
