Adjust navbar icon left margin.

--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -38,6 +38,7 @@
   svg {
     height: $icon-size-base;
     left: 2px;
+    margin-left: -2px;
     position: relative;
     top: -1px;
     vertical-align: top;
