Various homepage stylesheet tweaks.

--- a/assets/stylesheets/_imc.scss
+++ b/assets/stylesheets/_imc.scss
@@ -10,6 +10,7 @@
 @import "imc/carousel";
 @import "imc/footer";
 @import "imc/grid";
+@import "imc/icons";
 @import "imc/navbar";
 @import "imc/section";
 @import "imc/sidebar";
