--- a/assets/stylesheets/imc/_carousel.scss
+++ b/assets/stylesheets/imc/_carousel.scss
@@ -3,17 +3,23 @@
   margin-bottom: $line-height-computed;
 
   .carousel-caption {
-    background-color: rgba($imc-green, 0.6);
-    border: none;
     bottom: 25%;
-    color: #fff;
+    color: $text-color;
     font-family: $font-family-sans-serif;
     font-size: $font-size-large;
-    left: 57%;
-    padding: floor(($font-size-large * $line-height-large));
-    right: auto;
+    font-weight: lighter;
     text-align: left;
-    z-index: 10;
+    text-shadow: none;
+
+    &.carousel-caption-left {
+      left: 15%;
+      right: auto;
+    }
+
+    &.carousel-caption-right {
+      left: auto;
+      right: 15%;
+    }
 
     pre {
       background-color: transparent;
@@ -21,12 +27,11 @@
       color: inherit;
       font-family: inherit;
       font-size: inherit;
-      font-style: italic;
       margin: 0;
       padding: 0;
     }
 
-    b {
+    span {
       display: block;
       margin-top: $line-height-computed;
     }
