--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -42,7 +42,7 @@ $font-size-base:             16px; // Bootstrap override
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:           1.428571429 !default; // 22/16; formula copied from Bootstrap
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-$line-height-computed:       floor(($font-size-base * $line-height-base)) !default; // ~22px; formula copied from Bootstrap
+$line-height-computed:       floor($font-size-base * $line-height-base) !default; // ~22px; formula copied from Bootstrap
 
 $font-family-sans-serif:     "Lucida Sans Unicode", sans-serif; // Bootstrap override
 
@@ -50,6 +50,7 @@ $navbar-brand-font:          "Arial", sans-serif;
 $font-size-navbar-brand:     ceil(($font-size-base * 2.5)); // ~40px
 
 $icon-size-base:             $line-height-computed;
+$icon-size-large:            ceil($icon-size-base * 1.272727); // 28px
 
 //== Sidebar
 //
