--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -44,9 +44,9 @@ $line-height-base:           1.428571429 !default; // 22/16; formula copied from
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:       floor($font-size-base * $line-height-base) !default; // ~22px; formula copied from Bootstrap
 
-$font-family-sans-serif:     "Lucida Sans Unicode", sans-serif; // Bootstrap override
+$font-family-sans-serif:     "Helvetica", sans-serif; // Bootstrap override
 
-$navbar-brand-font:          "Arial", sans-serif;
+$navbar-brand-font:          $font-family-sans-serif;
 $font-size-navbar-brand:     ceil(($font-size-base * 2.5)); // ~40px
 
 $icon-size-base:             $line-height-computed;
