--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -9,8 +9,18 @@
 
 		.navbar-brand {
 			font-family: $navbar-brand-font;
-			font-size: $font-size-h2;
+			font-size: $navbar-brand-font-size;
       font-weight: 200;
+      line-height: $navbar-brand-font-size;
+      padding-bottom: (($navbar-height - $navbar-brand-font-size)/2);
+      padding-top: (($navbar-height - $navbar-brand-font-size)/2);
+
+      svg {
+        height: $navbar-brand-font-size;
+        stroke: $imc-green;
+        width: $navbar-brand-font-size;
+        vertical-align: text-top;
+      }
 		}
 	}
 
