Adjust sidebar styles to affix when scrolling starts.
This adjusts sidebar styles so that the sidebar affixes as soon as page
scrolling begins. Previously, the sidebar didn't affix until the page
header had been scrolled past.

A number of Sass variable reorganizations were necessary for this
change.

--- a/assets/stylesheets/imc/_sidebar.scss
+++ b/assets/stylesheets/imc/_sidebar.scss
@@ -1,12 +1,10 @@
 .sidebar {
   margin: $sidebar-vertical-margin $navbar-padding-horizontal $sidebar-vertical-margin 0;
 
-  // .affix makes position: fixed, so
-  // we remove the top margin and set
-  // top to the same value.
+  // .affix makes position: fixed, so top to the sidebar's top position
+  // relative to the document.
   &.affix {
-    margin-top: 0;
-    top: $sidebar-vertical-margin;
+    top: $header-height;
   }
 
   &.affix-bottom {
