--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -12,8 +12,8 @@
 			font-size: $navbar-brand-font-size;
       font-weight: 200;
       line-height: $navbar-brand-font-size;
-      padding-bottom: (($navbar-height - $navbar-brand-font-size)/2);
-      padding-top: (($navbar-height - $navbar-brand-font-size)/2);
+      padding-bottom: $navbar-brand-padding-vertical;
+      padding-top: $navbar-brand-padding-vertical;
 
       svg {
         height: $navbar-brand-font-size;
@@ -24,11 +24,11 @@
 		}
 	}
 
-	&.navbar-top {
-		margin-top: $navbar-margin-bottom;
+	&#navbar-site {
+		margin-top: $navbar-margin-vertical;
 
 		.navbar-nav > li > a {
-			color: $navbar-top-link-color;
+			color: $navbar-site-link-color;
 		}
 	}
 
