--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -44,26 +44,51 @@ $line-height-computed:       floor($font-size-base * $line-height-base) !default
 
 $font-family-sans-serif:     "Helvetica", sans-serif; // Bootstrap override
 
-$navbar-brand-font:          $font-family-sans-serif;
-$font-size-navbar-brand:     ceil(($font-size-base * 2.5)); // ~40px
-
 $icon-size-base:             $line-height-computed;
 $icon-size-large:            ceil($icon-size-base * 1.272727); // 28px
-
-
-//== Navbar
-//
-$navbar-default-brand-color: $imc-green; // Bootstrap override
-$navbar-top-link-color:      $imc-green;
-$navbar-main-bg-color:       $imc-green;
-$navbar-main-color:          #fff;
-
-$navbar-brand-font-size:     $font-size-h2;
 
 
 //== Navs
 //
 $nav-link-hover-bg:          $imc-green-light;
+$nav-link-padding-vertical:  10px;
+$nav-link-padding:           $nav-link-padding-vertical 15px; // Bootstrap variable.
+$nav-li-a-height:            ($line-height-computed + $nav-link-padding-vertical * 2);
+
+//== Navbar
+//
+$navbar-default-brand-color: $imc-green; // Bootstrap override
+$navbar-main-bg-color:       $imc-green;
+$navbar-main-color:          #fff;
+
+$navbar-height:              50px; // Bootstrap variable
+
+//** Navbar Brand
+$navbar-brand-font:             $font-family-sans-serif;
+$navbar-brand-font-size:        $font-size-h2;
+$navbar-brand-padding-vertical: (($navbar-height - $navbar-brand-font-size)/2);
+
+
+//== Site Navbar
+//
+//** Website-level navbar.
+$navbar-site-link-color:     $imc-green;
+
+$navbar-margin-bottom:       $line-height-computed; // Bootstrap variable
+$navbar-margin-vertical:     $navbar-margin-bottom;
+$navbar-site-height:         ((2 * $navbar-margin-vertical) + $navbar-brand-font-size + (2 * $navbar-brand-padding-vertical));
+
+
+//== Menu Navbar
+//
+$navbar-menu-height:         $nav-li-a-height;
+
+
+//== Header
+//
+//## Comprises top portion that is on every page.
+
+$header-height:              ($navbar-site-height + $navbar-menu-height);
 
 //== Sidebar
 //
