--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -20,7 +20,7 @@ $imc-accent-color:           #859900;
 $imc-red:                    #c0504d;
 $imc-orange:                 #e36c0a;
 $imc-green:                  #345c0d;
-$imc-green-light:            lighten($imc-green, 10%); // #94b64c
+$imc-green-light:            lighten($imc-green, 10%); // #4d8913
 $imc-light-green:            #f2f7e7;
 
 $link-color:                 $imc-green; // Bootstrap override
