Add styling for active navbar menu.

--- a/assets/stylesheets/_imc.scss
+++ b/assets/stylesheets/_imc.scss
@@ -12,5 +12,6 @@
 @import "imc/grid";
 @import "imc/icons";
 @import "imc/navbar";
+@import "imc/navs";
 @import "imc/section";
 @import "imc/sidebar";
