Adjust navbar color to match footer.

--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -58,7 +58,7 @@ $nav-li-a-height:            ($line-height-computed + $nav-link-padding-vertical
 //== Navbar
 //
 $navbar-default-brand-color: $imc-green; // Bootstrap override
-$navbar-default-bg:          #f3f1e5;
+$navbar-default-bg:          $imc-light-green;
 $navbar-main-bg-color:       $imc-green;
 $navbar-main-color:          #fff;
 
