Clean up green and footer variables.

--- a/assets/stylesheets/imc/_footer.scss
+++ b/assets/stylesheets/imc/_footer.scss
@@ -1,6 +1,5 @@
 #footer {
-  background-color: $imc-light-green;
-  color: $gray-base;
-  margin-top: $line-height-computed;
+  background-color: $footer-bg;
+  color: $footer-color;
   padding: $line-height-computed * 2 0 $line-height-computed * 2 0;
 }
