Adjust #learnmore jumbotron styling and remove .setoff

--- a/assets/stylesheets/_imc.scss
+++ b/assets/stylesheets/_imc.scss
@@ -11,6 +11,7 @@
 @import "imc/footer";
 @import "imc/grid";
 @import "imc/icons";
+@import "imc/jumbotron";
 @import "imc/navbar";
 @import "imc/navs";
 @import "imc/section";
