--- a/assets/stylesheets/imc/_grid.scss
+++ b/assets/stylesheets/imc/_grid.scss
@@ -1,3 +1,11 @@
-.home .row {
+.separator-bottom {
+  border-bottom: 1px solid #efefef;
   margin-bottom: 20px;
+  padding-bottom: $line-height-computed;
+
+}
+
+.separator-bottom-no-margin {
+  @extend .separator-bottom;
+  margin-bottom: 0;
 }
