--- a/assets/stylesheets/imc/_type.scss
+++ b/assets/stylesheets/imc/_type.scss
@@ -32,7 +32,7 @@ footer.imc-footer {
 // Headings
 // -------------------------
 
-h1, h3, .h1, .h3 {
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 200;
 }
 
