Underline footer headings.

--- a/assets/stylesheets/imc/_footer.scss
+++ b/assets/stylesheets/imc/_footer.scss
@@ -2,4 +2,8 @@
   background-color: $footer-bg;
   color: $footer-color;
   padding: $line-height-computed * 2 0 $line-height-computed * 2 0;
+
+  h4.widget-title {
+    text-decoration: underline;
+  }
 }
