Add margin-right to navbar brand image.

--- a/assets/stylesheets/imc/_navbar.scss
+++ b/assets/stylesheets/imc/_navbar.scss
@@ -16,6 +16,7 @@
       img {
         display: inline;
         height: $navbar-brand-font-size;
+        margin-right: 12px;
         vertical-align: text-top;
       }
 		}
