Adjust homepage carousel pre color.

--- a/assets/stylesheets/imc/_carousel.scss
+++ b/assets/stylesheets/imc/_carousel.scss
@@ -24,7 +24,7 @@
     pre {
       background-color: transparent;
       border: none;
-      color: inherit;
+      color: $gray-lighterer;
       font-family: inherit;
       font-size: inherit;
       margin: 0;
