New round of changes

--- a/assets/stylesheets/imc/_carousel.scss
+++ b/assets/stylesheets/imc/_carousel.scss
@@ -25,7 +25,7 @@
       background-color: transparent;
       border: none;
       color: $gray-lighterer;
-      font-family: inherit;
+      font-family: 'Marck Script', cursive;
       font-size: inherit;
       margin: 0;
       padding: 0;
