--- a/assets/stylesheets/imc/_variables.scss
+++ b/assets/stylesheets/imc/_variables.scss
@@ -4,7 +4,8 @@
 $imc-accent-color:           #859900;
 $imc-green:                  #345c0d;
 $imc-green-light:            lighten($imc-green, 10%); // #4d8913
-$imc-green-lighter:          #f2f7e7;
+$imc-green-lighter:          #c5e0b5;
+$imc-green-lightest:          #f2f7e7;
 
 $brand-primary:              $imc-green; // Bootstrap variable
 $link-color:                 $brand-primary; // Bootstrap variable
@@ -30,7 +31,7 @@ $line-height-base:           1.428571429 !default; // 22/16; formula copied from
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:       floor($font-size-base * $line-height-base) !default; // ~22px; formula copied from Bootstrap
 
-$font-family-sans-serif:     "Helvetica", sans-serif; // Bootstrap override
+$font-family-sans-serif:     'Mukta Vaani', sans-serif; // Bootstrap override
 
 $icon-size-base:             $line-height-computed;
 $icon-size-large:            ceil($icon-size-base * 1.272727); // 28px
@@ -46,7 +47,7 @@ $nav-li-a-height:            ($line-height-computed + $nav-link-padding-vertical
 //== Navbar
 //
 $navbar-default-brand-color: $imc-green; // Bootstrap override
-$navbar-default-bg:          $imc-green-lighter;
+$navbar-default-bg:          $imc-green-lightest;
 $navbar-main-bg-color:       $imc-green;
 $navbar-main-color:          #fff;
 
@@ -98,9 +99,16 @@ $jumbotron-bg:                   $gray-lighterer; // Bootstrap variable
 $jumbotron-bg-focus:             $blue-lighterer;
 $jumbotron-margin-bottom:        0;
 
+//== Well
+//
+//##
+
+$well-bg:     $imc-green-lightest;
+$well-border: $imc-green-lighter;
+
 //== Footer
 //
 //##
 
-$footer-bg:       $imc-green-lighter;
+$footer-bg:       $imc-green-lightest;
 $footer-color:    $gray-base;
